Table languages {
  lang_id  char(2)      [pk]
  name     varchar(100) [not null]
}

Table countries {
  country_id  char(3)      [pk]
  name        varchar(100) [not null]
}

Table cities {
  city_id     serial   [pk, increment]
  name        varchar(100) [not null]
  country_id  char(3)  [ref: > countries.country_id]
}

Table organizations {
  org_id     serial       [pk, increment]
  orgname    varchar(500) [unique]
  country_id char(3)      [ref: > countries.country_id]
  city_id    integer      [ref: > cities.city_id]
}

Table organization_names {
  id      serial       [pk, increment]
  org_id  integer      [not null, ref: > organizations.org_id]
  name    varchar(500) [not null]
  lang    char(2)      [not null, ref: > languages.lang_id]
  type    varchar(100)

  indexes {
    (org_id, name) [unique]
  }
}

Table organizations_databases {
  id        serial      [pk, increment]
  org_id    integer     [not null, ref: > organizations.org_id]
  db_id     integer     [not null, ref: > databases.db_id]
  db_org_id varchar(50) [not null]

  indexes {
    (org_id, db_id)    [unique]
    (db_id, db_org_id) [unique]
  }
}

Table journals {
  journal_id            serial       [pk, increment]
  title                 varchar(500) [not null]
  issn                  varchar(20)  [unique]
  eissn                 varchar(20)  [unique]
  publisher_org_id      integer      [ref: > organizations.org_id]
  lang                  char(2)      [ref: > languages.lang_id]
  website               varchar(500)
  doi_prefix            varchar(100) [unique]
  translated_journal_id integer      [unique, ref: > journals.journal_id]
}

Table journal_titles {
  title_id    serial   [pk, increment]
  journal_id  integer  [not null, ref: > journals.journal_id]
  lang        char(2)  [not null, ref: > languages.lang_id]
  title_text  text     [not null]

  indexes {
    (journal_id, lang)       [unique]
    (journal_id, title_text) [unique]
  }
}

Table issues {
  issue_id    serial   [pk, increment]
  journal_id  integer  [not null, ref: > journals.journal_id]
  year        smallint [not null]
  volume      smallint
  number      varchar(20)
  contnumber  integer

  indexes {
    (journal_id, year, volume, number) [unique]
  }
}

Table articles {
  article_id         serial       [pk, increment]
  issue_id           integer      [not null, ref: > issues.issue_id]
  title              text         [not null]
  linkurl            text
  genre              varchar(100)
  type               varchar(100)
  pages              varchar(30)
  language           char(2)      [ref: > languages.lang_id]
  doi                varchar(100) [unique]
  edn                varchar(20)  [unique]
  grnti              varchar(20)
  risc               boolean
  corerisc           boolean
  citation           text         [unique]
  supported          text
  valid_support      boolean
  project_number     smallint     [note: 'CHECK(project_number BETWEEN 1 AND 100)']
  print_date         date
  received_date      date
  authors_count      smallint     [note: 'CHECK(authors_count > 0)']
  translated_article_id integer   [unique, ref: > articles.article_id]

  indexes {
    (issue_id, title) [unique]
  }
}

Table articles_databases {
  id             serial      [pk, increment]
  article_id     integer     [not null, ref: > articles.article_id]
  db_id          integer     [not null, ref: > databases.db_id]
  db_article_id  varchar(50) [not null]

  indexes {
    (article_id, db_id)      [unique]
    (db_id, db_article_id)   [unique]
  }
}

Table article_titles {
  title_id    serial   [pk, increment]
  article_id  integer  [not null, ref: > articles.article_id]
  lang        char(2)  [not null, ref: > languages.lang_id]
  title_text  text     [not null]

  indexes {
    (article_id, lang) [unique]
  }
}

Table authors {
  author_id      serial      [pk, increment]
  firstname      varchar(32)
  middlename     varchar(32)
  lastname       varchar(32) [not null]
  initials       varchar(10)
  email          varchar(320)
  general_org_id integer     [ref: > organizations.org_id]
}

Table author_names {
  id          serial   [pk, increment]
  author_id   integer  [not null, ref: > authors.author_id]
  lang        char(2)  [not null, ref: > languages.lang_id]
  firstname   varchar(32)
  middlename  varchar(32)
  lastname    varchar(32) [not null]
  initials    varchar(10)

  indexes {
    (author_id, lang) [unique]
  }
}

Table articles_authors {
  id                 serial   [pk, increment]
  article_id         integer  [not null, ref: > articles.article_id]
  author_id          integer  [not null, ref: > authors.author_id]
  num                smallint [note: 'CHECK(num > 0)']
  aboutauthor        varchar(300)
  affiliations_count smallint [note: 'CHECK(affiliations_count > 0)']

  indexes {
    (article_id, author_id) [unique]
    (article_id, num)       [unique]
  }
}

Table author_affiliations {
  id                   serial   [pk, increment]
  article_author_id    integer  [not null, ref: > articles_authors.id]
  org_id               integer  [not null, ref: > organizations.org_id]
  num                  smallint [note: 'CHECK(num > 0)']
  affiliation_as_given varchar(500)

  indexes {
    (article_author_id, org_id) [unique]
    (article_author_id, num)    [unique]
  }
}

Table databases {
  db_id           serial       [pk, increment]
  name            varchar(200) [not null, unique]
  website         varchar(500) [unique]
  quartile_prefix varchar(10)
}

Table journals_databases {
  id          serial   [pk, increment]
  journal_id  integer  [not null, ref: > journals.journal_id]
  db_id       integer  [not null, ref: > databases.db_id]
  year        smallint [not null]
  is_included boolean  [not null]
  quartile    smallint
  if_value    float    [note: 'CHECK(if_value >= 0)']
  percentile  float    [note: 'CHECK(percentile >= 0)']

  indexes {
    (journal_id, db_id, year) [unique]
  }
}

Table journal_database_ids {
  id            serial      [pk, increment]
  journal_id    integer     [not null, ref: > journals.journal_id]
  db_id         integer     [not null, ref: > databases.db_id]
  db_journal_id varchar(50) [not null]

  indexes {
    (journal_id, db_id)    [unique]
    (db_id, db_journal_id) [unique]
  }
}

Table authors_databases {
  id           serial      [pk, increment]
  author_id    integer     [not null, ref: > authors.author_id]
  db_id        integer     [not null, ref: > databases.db_id]
  db_author_id varchar(50) [not null]

  indexes {
    (author_id, db_id)    [unique]
    (db_id, db_author_id) [unique]
  }
}
